FEATURE: Added background image option to users
